--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
-app/* linguist-documentation=false
-app/* linguist-vendored
+*.py text
+*.ipynb text
